[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/effect/Explosion.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/bullet/Bullet.gd" type="Script" id=2]
[ext_resource path="res://sprites/bulletGreen3_outline.png" type="Texture" id=3]
[ext_resource path="res://sprites/bulletSand3_outline.png" type="Texture" id=4]
[ext_resource path="res://sprites/bulletDark3_outline.png" type="Texture" id=5]
[ext_resource path="res://sprites/bulletBlue3_outline.png" type="Texture" id=6]
[ext_resource path="res://sprites/bulletRed3_outline.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 8 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Explosion" parent="." instance=ExtResource( 1 )]
visible = false
scale = Vector2( 0.3, 0.3 )
frame = 0
playing = false

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
